Refactor code to replace deprecated methods and improve instantiation practices
- Removed unused suppress warnings in QueueRoomResource and RoomProviderMapResource.
- Updated Locale instantiation to use Locale.of() instead of new Locale().
- Replaced deprecated newInstance() calls with getDeclaredConstructor().newInstance() for better practice.
- Adjusted voided checks to use getVoided() instead of isVoided() for consistency.
- Added suppress warnings for deprecated classes and methods in various task and scheduler classes.
- Improved exception handling and logging in several reporting and scheduler classes.